# Monolith

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  PRODUCT.md  PROJECT_PLAN.md  REPORT.md  TASK.md  TASK_1.md  TUTORIAL_DIAGNOSI.md  WinUI3_Settings_Prompt.md  build.bat  build_test.bat  deep-research-report.md  handoff.txt  msbuild.binlog  report.md  report_final.md  update_cpu.md  vcpkg.json
.github/workflows/: version-tag.yml  windows-ci.yml
app/desktop-ui/: .gitignore  App.xaml  App.xaml.cs  CMakeLists.txt  Directory.Build.targets  MainWindow.xaml  MainWindow.xaml.cs  Monolith.Settings.csproj  README.md  app.manifest  build.ts  deno.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/desktop-ui/Models/: RuntimeStatus.cs  SettingsData.cs
app/desktop-ui/Services/: RecorderReloadNotifier.cs  SettingsService.cs  StartupTrace.cs
app/desktop-ui/ViewModels/: SettingsViewModel.cs
app/desktop-ui/src-tauri/: Cargo.toml  tauri.conf.json
app/desktop-ui/src-tauri/capabilities/: default.json
app/desktop-ui/src-tauri/src/: asset_scope.rs  clip_catalog.rs  commands.rs  engine_rpc.rs  exe_icon.rs  game_catalog.rs  main.rs  media.rs  paths.rs  server.rs  settings_store.rs
app/desktop-ui/ui/: index.html  styles.css
app/desktop-ui/ui/src/: app.tsx
app/desktop-ui/ui/src/home/: clip-card.tsx  confirm-dialog.tsx  context-menu.tsx  detail-view.tsx  filter-menu.tsx  filters.tsx  fullscreen.tsx  hashtag-dialog.tsx
app/desktop-ui/ui/src/lib/: api.ts  format.ts  multitrack.ts  player.ts  settings-api.ts  window.ts
app/desktop-ui/ui/src/settings/: audio-settings.tsx  controls.tsx  settings-popup.tsx
app/desktop-ui/ui/src/shell/: icons.tsx  sidebar.tsx  titlebar.tsx
app/engine/: README.md
app/recorder/: CMakeLists.txt  monolith.rc
app/recorder/src/: feedback_sounds.h  main.cpp  resource.h  settings_config.cpp  settings_config.h  settings_window.cpp  settings_window.h  updater.cpp  updater.h  version.h.in
apps/windows-recorder/: CMakeLists.txt
config/: default-config.json  default_config.h.in
docs/: ARCHITECTURE.md  DECISIONS.md  DEVELOPMENT_RULES.md  RELEASING.md  ROADMAP.md
docs/handover/: ACTIVE_HANDOVER.md
installer/: monolith.iss
libs/audio/: CMakeLists.txt  audio.cpp  audio.h
libs/capture/: CMakeLists.txt  capture.cpp  capture.h
libs/config/: README.md
libs/encoding/: CMakeLists.txt  encoding.cpp  encoding.h  ffmpeg_fetch.cpp  ffmpeg_process.cpp  ffmpeg_process.h  mux_common.cpp  mux_common.h  recording_process.cpp  recording_process.h  segment_replay.cpp  segment_replay.h  thumbnail.cpp
libs/gamelist/: CMakeLists.txt  gamelist.cpp  gamelist.h
libs/ipc/: CMakeLists.txt  ipc_server.cpp  ipc_server.h
libs/logging/: CMakeLists.txt  logging.cpp  logging.h
libs/platform-win/: CMakeLists.txt  platform_win.cpp  platform_win.h
libs/recording/: CMakeLists.txt  recording.cpp  recording.h
libs/replay-buffer/: CMakeLists.txt  replay_buffer.cpp  replay_buffer.h
libs/storage/: CMakeLists.txt  storage.cpp  storage.h
plugins/stream-deck/: .gitignore  README.md  manifest-notes.md  manifest.json  package-lock.json  package.json  tsconfig.json
plugins/stream-deck/com.monolith.recorder.sdPlugin/: manifest.json
plugins/stream-deck/com.monolith.recorder.sdPlugin/imgs/: README.md
plugins/stream-deck/scripts/: package-plugin.ps1
plugins/stream-deck/src/: ipc-client.ts  plugin.ts
plugins/stream-deck/src/actions/: pause-resume.ts  recording-toggle.ts  save-replay.ts
plugins/stream-deck/top.fraa2a.monolith.sdPlugin/imgs/: README.md
plugins/streamdeck/: README.md  manifest-notes.md
research_codebase/: findings_codebase.md  research_plan.md  research_report.md
scripts/: README.md  generate-appcast.ps1  generate-icon.ps1
tests/: README.md
