[package]
name = "monolith-ui"
version = "1.2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
ureq = { version = "2", features = ["json"] }
rfd = "0.15"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
] }
png = "0.17"

[features]
# When this feature is OFF, tauri's build script sets cfg(dev)=true and the
# webview navigates to build.devUrl (http://localhost:1420) — correct for
# `tauri dev` (Vite HMR), fatal for a shipped exe ("localhost refused to
# connect"). `cargo tauri build` enables it automatically; we build with plain
# `cargo build --release` (no tauri-cli), so the release path must pass
# `--features custom-protocol` explicitly to load the embedded frontendDist via
# the tauri:// protocol. Do NOT enable it by default — that would break Vite
# HMR under `tauri dev`.
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "monolith_ui"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = true
strip = true
